fix author image squish

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -244,6 +244,7 @@
 
  		img.author {
 	 		height: 100%;
+	 		width: auto;
 	 		float: left;
 	 		margin-right: 80px;
 	 	}
